# ADS-B_Anomaly_Detector

./: .gitignore  README.md  batch_collect_validate.py  main.py  present_middle_east_processed.py  process_local_files.py  pyproject.toml
data/processed/: flight_results_iran_20260419T193431Z_20260419T193431Z.parquet  flight_results_middle_east_20251201T000000Z_20251201T020000Z.parquet  flight_results_middle_east_20260301T000000Z_20260301T020000Z.parquet  flight_results_middle_east_20260301T020000Z_20260301T040000Z.parquet  flight_results_middle_east_20260301T040000Z_20260301T060000Z.parquet  flight_results_middle_east_20260301T060000Z_20260301T080000Z.parquet  flight_results_middle_east_20260301T080000Z_20260301T100000Z.parquet  flight_results_middle_east_20260301T100000Z_20260301T120000Z.parquet  flight_results_middle_east_20260301T120000Z_20260301T140000Z.parquet  flight_results_middle_east_20260301T140000Z_20260301T160000Z.parquet  flight_results_middle_east_20260301T160000Z_20260301T180000Z.parquet  flight_results_middle_east_20260301T180000Z_20260301T200000Z.parquet  flight_results_middle_east_20260301T200000Z_20260301T220000Z.parquet  flight_results_middle_east_20260301T220000Z_20260302T000000Z.parquet  flight_results_middle_east_20260302T000000Z_20260302T020000Z.parquet  flight_results_middle_east_20260302T020000Z_20260302T040000Z.parquet  flight_results_middle_east_20260302T040000Z_20260302T060000Z.parquet  flight_results_middle_east_20260302T060000Z_20260302T080000Z.parquet  (+11 more)
src/: config.py  data_collector.py  detector.py  features.py  visualize.py
