[project]
name = "ads-b-anomaly-detector"
version = "0.1.0"
description = "ADS-B Anomaly Detection System for RPI Master's Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "pyopensky>=1.0.0",
    "traffic>=2.8.0",
    "streamlit>=1.28.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]
